Add instructions for how to get sanford up and running on Tanzu Platform for Kubernetes (#9)
* Add Weaviate support
* Add custom Spring Cloud Binding for MinIO.  Refresh docs for PREREQ, RUN, and TOOLS.
* Add prune script
  * until such time as we have a .tanzuignore
* Add link to Cloud Foundry Weekly, Episode 34 in BACKGROUND doc
* Add how to work with Github container registry
* Change badge for pre-built container image on Github CR